# google-ads-mcp-official_main

./: .gitignore  MCP-SETUP-GUIDE.md  README.md  customer_ids.txt  mcp-config.json  negativeKW_gameplan.md  official-server-requirements.txt  switch-mcp-server.py  test-mcp-servers.py
clients/: NEGATIVE_KEYWORD_STRATEGY.md  README.md  analyze_negative_kw_overlap.py
clients/ocean-movers/: README.md  client-config.yaml  test-connection.py
clients/ocean-movers/reports/: full_analysis_20251013_055401.txt
clients/ocean-movers/scripts/: analyze_search_queries.py  download_instagram_browser.py  download_instagram_media.py  download_instagram_simple.py  full_account_analysis.py
clients/te-moving/: README.md  client-config.yaml
clients/te-moving/reports/: full_analysis_20251013_054650.txt
clients/te-moving/scripts/: full_account_analysis.py
official-google-ads-mcp/: .gitignore  .pylintrc  GEMINI.md  README.md  pyproject.toml
official-google-ads-mcp/ads_mcp/: coordinator.py  server.py  stdio.py  utils.py
official-google-ads-mcp/ads_mcp/context/: GAQL.md  Google_Ads_API_Reporting_Views.md
official-google-ads-mcp/ads_mcp/scripts/: generate_views.py
official-google-ads-mcp/ads_mcp/tools/: api.py  docs.py
official-google-ads-mcp/tests/scripts/: test_generate_views.py
official-google-ads-mcp/tests/tools/: test_api.py
